man_MANS = hybrid.1 hybrid-min.1 hybrid-ss.1 hybrid-ss-min.1 hybrid-ss-noml.1 hybrid-ss-simple.1 hybrid-plot.1 hybrid-plot-ng.1 concentration.1 concentration-same.1 concentrations.pl.1 concentrations-same.pl.1 ensemble-dg.1 ensemble-dg-same.1 ensemble-ext.1 ensemble-ext-same.1 dG2dH.1 dG2dS.1 dG2Cp.1 ct-energy.1 hybrid2.pl.1 hybrid2-x.pl.1 hybrid2-min.pl.1 hybrid2-min-x.pl.1 hybrid2-2s.pl.1 hybrid2-2s-x.pl.1 ct-ext.1 ct-uniq.1 hybrid-2s.pl.1 hybrid-ss-2s.pl.1 ct-prob.1 melt.pl.1 plot2ann.pl.1 h-num.pl.1 ss-count.pl.1 hybrid-select.pl.1 ct2rnaml.1 ct-energy-det.pl.1 UNAFold.pl.1 ITC-plot.pl.1 vantHoff-plot.pl.1
DISTCLEANFILES = hybrid.1 hybrid-min.1 hybrid-ss.1 hybrid-ss-min.1 hybrid-ss-noml.1 hybrid-ss-simple.1 hybrid-plot.1 hybrid-plot-ng.1 concentration.1 concentration-same.1 concentrations.pl.1 concentrations-same.pl.1 ensemble-dg.1 ensemble-dg-same.1 ensemble-ext.1 ensemble-ext-same.1 dG2dH.1 dG2dS.1 dG2Cp.1 ct-energy.1 hybrid2.pl.1 hybrid2-x.pl.1 hybrid2-min.pl.1 hybrid2-min-x.pl.1 hybrid2-2s.pl.1 hybrid2-2s-x.pl.1 ct-ext.1 ct-uniq.1 hybrid-2s.pl.1 hybrid-ss-2s.pl.1 ct-prob.1 melt.pl.1 plot2ann.pl.1 h-num.pl.1 ss-count.pl.1 hybrid-select.pl.1 ct2rnaml.1 ct-energy-det.pl.1 UNAFold.pl.1 ITC-plot.pl.1 vantHoff-plot.pl.1
